[package]
name = "mdp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
assert_float_eq = "1.1.3"
clap = "4.3.19"
csv = "1.2.1"
eframe = "0.21.3"
egui = "0.21.0"
iced = { version = "0.10.0", features = ["canvas", "debug", "tokio"] }
itertools = "0.10.5"
rand = "0.8.5"
rand_chacha = "0.3.1"
rayon = "1.7.0"
time = { version = "0.3.25", features = ["local-offset"] }

[profile.release]
opt-level = 3               # Use slightly better optimizations.
overflow-checks = false     # Disable integer overflow checks.
